--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,6 +9,8 @@
         android:layout_height="match_parent">
 
         <include layout="@layout/snippet_top_profilebar"/>
+
+        <include layout="@layout/layout_bottom_navigation_view" />
     </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
