--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <Toolbar
+        <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tabs"
             android:background="@drawable/white_grey_border_bottom">
 
-        </Toolbar>
+        </android.support.design.widget.TabLayout>
 
 
     </android.support.design.widget.AppBarLayout>
