Building the User Profile Part 2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="grey">#BFBFBF</color>
     <color name="white">#FFF</color>
     <color name="black">#000000</color>
+    <color name="link_blue">#005CE6</color>
 </resources>
