--- a/app/src/main/res/layout/snippet_top_account_settings_toolbar.xml
+++ b/app/src/main/res/layout/snippet_top_account_settings_toolbar.xml
@@ -4,7 +4,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@drawable/white_grey_border_bottom">
-        
+
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -14,25 +14,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="@string/stephanie_hallberg"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:layout_marginStart="15dp"
-                    android:id="@+id/profileName" />
-
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_marginStart="10dp"
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
-                    android:id="@+id/profileMenu"
-                    android:src="@drawable/ic_ellipses"
-                    />
+                    android:id="@+id/backArrow"
+                    android:src="@drawable/ic_back_arrow" />
+
+                <TextView
+                    android:layout_toRightOf="@id/backArrow"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:text="Options"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="5dp"
+                    android:id="@+id/profileName" />
+
+
 
             </RelativeLayout>
 
