--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -1,5 +1,5 @@
-<merge xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<merge xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
@@ -16,76 +16,94 @@
             android:text="250"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/textPosts"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:text="Posts"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvPosts" />
+            android:layout_marginTop="-8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvPosts"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"/>
 
         <TextView
             android:id="@+id/tvFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="845"
+            android:text="300"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintEnd_toStartOf="@+id/tvFollowing"
-            app:layout_constraintHorizontal_bias="0.414"
-            app:layout_constraintStart_toEndOf="@+id/tvPosts"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="2dp"
+            app:layout_constraintRight_toLeftOf="@+id/tvFollowing"
+            android:layout_marginRight="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/tvPosts"
+            android:layout_marginLeft="8dp"
+            />
 
         <TextView
             android:id="@+id/textFollowers"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:text="Followers"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/textFollowing"
-            app:layout_constraintHorizontal_bias="0.468"
-            app:layout_constraintStart_toEndOf="@+id/textPosts"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
+            android:layout_marginTop="-8dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowers"
+            app:layout_constraintLeft_toRightOf="@+id/textPosts"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintRight_toLeftOf="@+id/textFollolwing"
+            android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.526"/>
 
         <TextView
             android:id="@+id/tvFollowing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="31"
+            android:text="400"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
-            android:id="@+id/textFollowing"
+            android:id="@+id/textFollolwing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Following"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvFollowing"
+            android:layout_marginRight="-22dp"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <TextView
             android:id="@+id/textEditProfile"
-            android:layout_width="137dp"
-            android:layout_height="28dp"
-            android:background="@drawable/grey_border"
+            android:layout_width="156dp"
+            android:layout_height="18dp"
             android:text="Edit your profile"
-            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.433"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textFollowers"
-            app:layout_constraintVertical_bias="0.025" />
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintVertical_bias="0.0"
+            android:textAlignment="center"
+            android:background="@drawable/grey_border"/>
     </android.support.constraint.ConstraintLayout>
+
+
 
 </merge>
