--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -8,7 +8,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rel_layout_1">
+
         <!-- gallery toolbar -->
+        <include layout="@layout/snippet_top_gallery_toolbar" />
 
     </RelativeLayout>
 
