--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rel_layout_1"
             android:id="@+id/rel_layout_2"
-            android:background="@drawable/white_grey_border_bottom">
+            android:background="@color/white">
             
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,7 +58,8 @@
                 android:orientation="vertical"
                 android:layout_below="@id/linLayout"
                 android:padding="20dp"
-                android:id="@+id/linLayout2">
+                android:id="@+id/linLayout2"
+                android:background="@drawable/white_grey_border_bottom">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -93,7 +94,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/rel_layout_3"
                 android:layout_below="@+id/linLayout2"
-                android:layout_marginBottom="50dp">
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/white_grey_border_bottom">
 
                 <GridView
                     android:layout_width="match_parent"
