--- a/app/src/main/res/drawable-hdpi/black_border.xml
+++ b/app/src/main/res/drawable-hdpi/black_border.xml
@@ -4,16 +4,16 @@
     android:layout_height="1dp">
 
     <item
-        android:bottom="-1dp"
+        android:bottom="1dp"
         android:top="1dp"
-        android:right="-1dp"
-        android:left="-1dp">
+        android:right="1dp"
+        android:left="1dp">
 
         <shape
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/grey"/>
+                android:color="@color/black"/>
             <solid
                 android:color="@color/white"/>
 
