--- a/app/src/main/res/drawable-hdpi/follow_button.xml
+++ b/app/src/main/res/drawable-hdpi/follow_button.xml
@@ -4,18 +4,19 @@
     android:layout_height="1dp">
 
     <item
-        android:bottom="-1dp"
+        android:bottom="1dp"
         android:top="1dp"
-        android:right="-1dp"
-        android:left="-1dp">
+        android:right="1dp"
+        android:left="1dp">
 
         <shape
             android:shape="rectangle">
             <stroke
                 android:width="1dp"
-                android:color="@color/grey"/>
+                android:color="@color/link_blue"/>
             <solid
-                android:color="@color/white"/>
+                android:color="@color/link_blue"/>
+            <corners android:radius="2dp"/>
 
         </shape>
     </item>
