Image Post Date

--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -38,9 +38,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_centerVertical="true"
                     android:id="@+id/username"
-                    android:textColor="@color/black"
-                    />
-
+                    android:textColor="@color/black" />
 
                 <ImageView
                     android:layout_width="30dp"
