--- a/app/src/main/res/layout/layout_view_post.xml
+++ b/app/src/main/res/layout/layout_view_post.xml
@@ -62,7 +62,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/relLayout2"
-                android:layout_below="@+id/post_image">
+                android:layout_below="@+id/post_image"
+                android:background="@color/white">
 
                 <RelativeLayout
                     android:layout_width="60dp"
@@ -85,7 +86,7 @@
                         android:id="@+id/image_heart"
                         android:layout_centerInParent="true"
                         android:layout_marginLeft="20dp"
-                        android:src="@drawable/ic_heart_outline"
+                        android:src="@drawable/ic_heart_white"
                         android:visibility="visible"/>
 
                 </RelativeLayout>
@@ -108,7 +109,8 @@
                 android:id="@+id/relLayout3"
                 android:layout_below="@+id/relLayout2"
                 android:padding="20dp"
-                android:layout_marginBottom="50dp">
+                android:layout_marginBottom="50dp"
+                android:background="@color/white">
 
                 <TextView
                     android:layout_width="wrap_content"
