--- a/app/src/main/res/layout/snippet_post_toolbar.xml
+++ b/app/src/main/res/layout/snippet_post_toolbar.xml
@@ -19,7 +19,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_centerVertical="true"
-                android:id="@+id/imageBackArrow"
+                android:id="@+id/BackArrow"
                 android:src="@drawable/ic_back_arrow"/>
 
             <TextView
