--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/rel_layout_1">
+        android:id="@+id/relLayout1">
 
         <!-- gallery toolbar -->
-        <include layout="@layout/snippet_top_gallery_toolbar" />
+        <include layout="@layout/snippet_top_gallery_toolbar"/>
 
     </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="100"
         android:orientation="vertical"
-        android:layout_below="@id/rel_layout_1">
+        android:layout_below="@id/relLayout1">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="60">
+
 
             <ImageView
                 android:layout_width="match_parent"
@@ -36,7 +37,7 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:id="@+id/progressBar"
-                android:layout_centerInParent="true" />
+                android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
@@ -51,6 +52,8 @@
             android:stretchMode="none"
             android:gravity="center"
             android:layout_marginTop="1dp">
+
+
 
         </GridView>
 
