Implementing a Following System + Fixes directorySpinner Bug

--- a/app/src/main/res/layout/snippet_top_gallery_toolbar.xml
+++ b/app/src/main/res/layout/snippet_top_gallery_toolbar.xml
@@ -1,14 +1,16 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@drawable/white_grey_border_bottom">
+        android:background="@drawable/white_grey_border_bottom"
+        >
 
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/profileToolbar">
+            android:id="@+id/profileToolBar">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -19,24 +21,39 @@
                     android:layout_height="30dp"
                     android:layout_marginEnd="20dp"
                     android:layout_centerVertical="true"
-                    android:id="@+id/BackArrow"
-                    android:src="@drawable/ic_backarrow"
-                    />
+                    android:id="@+id/ivCloseShare"
+                    android:src="@drawable/ic_black_x"/>
 
-                <TextView
-                    android:id="@+id/tvNext"
+                <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/BackArrow"
-                    android:text="Comments"
-                    android:layout_marginRight="15dp"
+                    android:layout_toRightOf="@+id/ivCloseShare"
+                    android:id="@+id/spinnerDirectory"
                     android:textSize="20sp"
                     android:textColor="@color/black"
-                    android:layout_centerVertical="true"/>
+                    android:text="Gallery"
+                    android:layout_centerVertical="true"
+                    android:gravity="center_vertical">
+
+
+                </Spinner>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/string_next"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="15dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/link_blue"
+                    android:layout_centerVertical="true"
+                    android:id="@+id/tvNext"
+                    />
 
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
+
 </merge>
