--- a/app/src/main/res/layout/layout_top_tabs.xml
+++ b/app/src/main/res/layout/layout_top_tabs.xml
@@ -1,28 +1,28 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_alignParentTop="true">
-
-    <android.support.design.widget.AppBarLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="50dp"
+        android:layout_alignParentTop="true">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/tabs"
-            android:background="@drawable/white_grey_border_bottom">
+            android:layout_height="wrap_content">
 
-        </android.support.design.widget.TabLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/tabs"
+                android:background="@drawable/white_grey_border_bottom">
+
+            </com.google.android.material.tabs.TabLayout>
 
 
-    </android.support.design.widget.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
 
-</RelativeLayout>
+    </RelativeLayout>
 
 </merge>
